mobile: fixes logo spacing

--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -320,9 +320,6 @@ privacy-color('.search__results__result--privacy-', color)
   #layout-header
     position fixed
 
-    .logo
-      width 70px
-
     li
       line-height 30px
 
